fix(sidebar): adjust kebab z-index

--- a/style/modules/_sidebar.scss
+++ b/style/modules/_sidebar.scss
@@ -7,14 +7,10 @@
 
 .side,
 .side:not(#searchexpando),
-.side:not(#search_hidemore) {
-	@include transition-default;
-}
+.side:not(#search_hidemore) { @include transition-default; }
 
 // hide sidebar items
-.side * {
-	opacity: 0;
-}
+.side * { opacity: 0; }
 
 .side {
 	// float: right;
@@ -37,15 +33,16 @@
 
 	// kebab menu
 	&:before {
-    content: "";
+    position: fixed;
+    top: em(215, 10);
+    right: 0;
     display: block;
     height: em(36, 10);
     width: em(36, 10) + 1.5em;
-    opacity: 0.25;
-    position: fixed;
-    right: 0;
-    top: em(215, 10);
+		z-index: 999;
+    content: "";
     background: url(%%kebab%%) no-repeat;
+    opacity: 0.25;
 		@include transition-default;
 	}
 
